--- a/Project/index.html
+++ b/Project/index.html
@@ -20,7 +20,7 @@
     <div class="logo container">
         <img src="img/WEBLOGO_GURI.png" alt="">
     </div>
-    <div class="container">
+    <div id="button_containter" class="container">
         <a class="button" href="#">Nyitvatartás</a>
         <a class="button" href="#">Áraink</a>
         <a class="button" href="#">Szolgáltatások</a>
