--- a/Project/index.html
+++ b/Project/index.html
@@ -96,70 +96,94 @@
     </div>
 </div>
 
- <!-- Container for the image gallery -->
+<!-- Container for the image gallery -->
 <div class="field gallery_container">
 
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-      <img src="img/gurigallery/guri1.jpg" style="width:100%" alt="">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-      <img src="img/gurigallery/guri2.jpg" style="width:100%" alt="">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-      <img src="img/gurigallery/guri3.jpg" style="width:100%" alt="">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-      <img src="img/gurigallery/guri4.jpg" style="width:100%" alt="">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-      <img src="img/gurigallery/guri5.jpg" style="width:100%" alt="">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-      <img src="img/gurigallery/guri6.jpg" style="width:100%" alt="">
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-<!--  <div class="caption-container">-->
-<!--    <p id="caption"></p>-->
-<!--  </div>-->
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+    <!-- Full-width images with number text -->
+    <div class="mySlides">
+        <div class="numbertext">1 / 8</div>
+        <img src="img/gurigallery/guri1.jpg" style="width:100%" alt="">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+
+    <div class="mySlides">
+        <div class="numbertext">2 / 8</div>
+        <img src="img/gurigallery/guri2.jpg" style="width:100%" alt="">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+
+    <div class="mySlides">
+        <div class="numbertext">3 / 8</div>
+        <img src="img/gurigallery/guri3.jpg" style="width:100%" alt="">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+
+    <div class="mySlides">
+        <div class="numbertext">4 / 8</div>
+        <img src="img/gurigallery/guri4.jpg" style="width:100%" alt="">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+
+    <div class="mySlides">
+        <div class="numbertext">5 / 8</div>
+        <img src="img/gurigallery/guri5.jpg" style="width:100%" alt="">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/gurigallery/guri6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+
+    <div class="mySlides">
+        <div class="numbertext">6 / 8</div>
+        <img src="img/gurigallery/guri6.jpg" style="width:100%" alt="">
     </div>
-  </div>
+
+    <div class="mySlides">
+        <div class="numbertext">7 / 8</div>
+        <img src="img/gurigallery/guri7.jpg" style="width:100%" alt="">
+    </div>
+
+    <div class="mySlides">
+        <div class="numbertext">8 / 8</div>
+        <img src="img/gurigallery/guri8.jpg" style="width:100%" alt="">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <!-- Image text -->
+    <!--  <div class="caption-container">-->
+    <!--    <p id="caption"></p>-->
+    <!--  </div>-->
+
+    <!-- Thumbnail images -->
+    <div class="row">
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri1.jpg" style="width:100%" onclick="currentSlide(1)"
+                 alt="The Woods">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri2.jpg" style="width:100%" onclick="currentSlide(2)"
+                 alt="Cinque Terre">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri3.jpg" style="width:100%" onclick="currentSlide(3)"
+                 alt="Mountains and fjords">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri4.jpg" style="width:100%" onclick="currentSlide(4)"
+                 alt="Northern Lights">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri5.jpg" style="width:100%" onclick="currentSlide(5)"
+                 alt="Nature and sunrise">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri6.jpg" style="width:100%" onclick="currentSlide(6)"
+                 alt="Snowy Mountains">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri7.jpg" style="width:100%" onclick="currentSlide(7)"
+                 alt="Snowy Mountains">
+        </div>
+        <div class="column">
+            <img class="demo cursor" src="img/gurigallery/mini/guri8.jpg" style="width:100%" onclick="currentSlide(8)"
+                 alt="Snowy Mountains">
+        </div>
+    </div>
 </div>
 
 <div class="field">
