--- a/Project/index_old.html
+++ b/Project/index_old.html
@@ -6,6 +6,7 @@
     <meta name="description"
           content="Üdvözlünk a Guri Bowling Bár & Pizzéria honlapján! Játékos kikapcsolódásra vágysz? Ennél egy jó pizzát? Vagy csak beugranál egy italra? Gurulj le a Guri-ba!">
     <title>Guri Bowling Bár & Pizzéria</title>
+    <script src="https://kit.fontawesome.com/d1d625833c.js" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="gallery.css">
     <script src="gallery.js" defer></script>
@@ -16,10 +17,11 @@
 </head>
 <body>
 
-<div class="field container">
+<div class="field container" id="header">
     <div class="logo container">
         <img src="img/WEBLOGO_GURI.png" alt="">
     </div>
+<!--    <i class="fa-solid fa-star"></i>-->
     <div class="dropdown">
         <button class="dropbtn">☰</button>
         <div class="dropdown-content">
